# rubberduck

./: .gitignore  Evaluation.ipynb  PromptEngineering.ipynb  pyproject.toml
setup/ansible/: ansible.cfg  hosts  rubberduck.aws_ec2.yml  setup.yml
setup/ansible/roles/common/files/ssh_keys/: govind
setup/ansible/roles/common/tasks/: main.yml
setup/tofu/: main.tf
