[tool.poetry]
name = "rubberduck"
version = "0.1.0"
description = ""
authors = ["Govind krishna Joshi <govind@nilenso.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
llama-index-core = "^0.10.56"
llama-index-llms-ollama = "^0.1.6"
ragas = "^0.1.11"
llama-index-embeddings-huggingface = "^0.2.2"
datasets = "^2.20.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
jupyter-nbextensions-configurator = "^0.6.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
